--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
